# local-llm-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  assistant.service  pyproject.toml
config/: settings.yaml
plugins/: README.md
plugins/builtin/comfyui/: __init__.py  plugin.py  service.py  tools.py
plugins/builtin/comfyui/workflows/: README.md
plugins/builtin/google_drive/: __init__.py  plugin.py  service.py
plugins/builtin/homeassistant/: __init__.py  plugin.py  service.py
plugins/builtin/proxmox/: __init__.py  plugin.py  service.py
plugins/community/: README.md
scripts/: inspect_workflow.py
src/: config.py  main.py
src/llm/: agent.py  client.py  tools.py
src/persistence/: conversations.py  db.py
src/plugins/: __init__.py  base.py  loader.py  registry.py
src/voice/: stt.py  tts.py  vad.py  wakeword.py
src/web/: routes.py
src/web/static/: app.js  index.html  style.css
tests/: test_comfyui_plugin.py  test_persistence.py  test_plugin_loader.py  test_stt.py
wake_words/: README.md
