[project]
name = "local-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "ollama>=0.3.0",

    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "aiohttp>=3.10.0",
    "aiofiles>=23.0.0",

    # Voice — wake word
    "openwakeword>=0.6.0",

    # Voice — STT
    "faster-whisper>=1.0.3",

    # Voice — TTS
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "edge-tts>=6.1.12",

    # Voice — VAD + audio I/O
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",

    # Persistence
    "aiosqlite>=0.20.0",

    # Config
    "pyyaml>=6.0.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",

    # Services
    "google-api-python-client>=2.140.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "proxmoxer>=2.0.0",

    # Utilities
    "pillow>=10.4.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"